--- a/_utils/ef1error.html
+++ b/_utils/ef1error.html
@@ -8,7 +8,7 @@ version: "0.0.1"
 
 <head>
   <meta charset="UTF-8">
-  <title>{{ page.title }} | v{{ page.version }}</title>
+  <title>{{ page.title }}</title>
 </head>
 <style>
   * {
