--- a/_utils/ef1error.html
+++ b/_utils/ef1error.html
@@ -1,14 +1,15 @@
 ---
 layout: null
 title: "騎記歐版 EF1 故障碼解析"
-version: "0.0.2"
-date: 20200708T170000+08:00
+version: "0.0.3"
+date: 20200708T180000+08:00
 ---
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
 </head>
 <style>
@@ -19,9 +20,12 @@ date: 20200708T170000+08:00
 
   body {
     background-color: #EDEDED;
+    /* padding: 0 10px; */
   }
 
-  .content {}
+  .content {
+    margin: 0 auto;
+  }
 
   .content>.content-search {
     text-align: center;
