--- a/map/index.html
+++ b/map/index.html
@@ -42,7 +42,7 @@ map:
       right: 0;
     }
   </style>
-  <img class="see-through" src="../assets/images/through.png" />
+  <img class="see-through" src="{{ site.url }}/assets/images/through.png" />
   <ul>
   {% for item in page.map %}
     <li><a href="{{ site.url }}{{ item.url }}">{{ item.title }}</a></li>
