--- a/map/index.html
+++ b/map/index.html
@@ -38,8 +38,8 @@ map:
       float: right;
       display: block;
       max-width: 200px;
-      position: absolute;
-      right: 0;
+      /* position: absolute;
+      right: 0; */
     }
   </style>
   <img class="see-through" src="{{ site.url }}/assets/images/through.png" />
