--- a/map/index.html
+++ b/map/index.html
@@ -35,11 +35,12 @@ map:
 <div>
   <style type="text/css">
     .see-through {
-      float: right;
-      display: block;
+      /* float: right;
+      display: block; */
       max-width: 200px;
-      /* position: absolute;
-      right: 0; */
+      display: inline-block;
+      position: fixed;
+      right: 0;
     }
   </style>
   <img class="see-through" src="{{ site.url }}/assets/images/through.png" />
