--- a/map/index.html
+++ b/map/index.html
@@ -49,7 +49,7 @@ map:
 <div class="map-content">
 
   <div class="right">
-    <img class="see-through" src="{{ site.url }}/assets/images/through.png" />
+    <img class="see-through" src="{{ site.url }}/assets/images/see-through.png" />
   </div>
 
   <div class="left">
