--- a/map/index.html
+++ b/map/index.html
@@ -14,6 +14,8 @@ map:
       url: "/categories"
     - title: "Tags"
       url: "/tags"
+  - title: "Tweets"
+    url: "/tweets"
   - title: "Gallery"
     url: "/gallery"
     sub:
