--- a/tweets/index.html
+++ b/tweets/index.html
@@ -20,7 +20,7 @@ on_load:
     --tweet-user-line-height: 20px;
     --tweet-text-font-size: 14px;
     --tweet-text-line-height: 16px;
-    --tweet-color-light: #EDEDED;
+    --tweet-color-light: #FCFCFC;
     --tweet-color-dark: #515F65;
     --tweet-color-white: #ffffff;
     --tweet-color-black: #000000;
@@ -119,12 +119,12 @@ on_load:
   .light .tweet-contents,
   .light .tweet-contents .tweet-text,
   .light .tweet-contents .tweet-text p {
-    color: var(--tweet-color-text-light);
+    color: var(--tweet-color-text-dark);
   }
   .dark .tweet-contents,
   .dark .tweet-contents .tweet-text,
   .dark .tweet-contents .tweet-text p {
-    color: var(--tweet-color-text-dark);
+    color: var(--tweet-color-text-light);
   }
   .tweet-media {
     display: -ms-flexbox;
