--- a/tweets/index.html
+++ b/tweets/index.html
@@ -169,7 +169,7 @@ on_load:
             {% assign tweet_media_original = tweet_media_folder | append: tweet_img.url %}
             {% assign tweet_media_preview = tweet_media_folder | append: 'preview_' | append: tweet_img.url %}
             <a href="{{ tweet_media_original }}" type="{{ tweet_media_type }}/{{ tweet_media_format }}"{% if tweet_media_type == 'video' %} data-poster="{{ tweet_media_preview }}" data-sources='[{ "href": "{{ tweet_media_original }}", "type": "{{ tweet_media_type }}/{{ tweet_media_format }}"}]'{% endif %}>
-              <img src="preview_{{ tweet_media_preview }}" />
+              <img src="{{ tweet_media_preview }}" />
             </a>
           </div>
           {% endfor %}
