--- a/tweets/index.html
+++ b/tweets/index.html
@@ -21,10 +21,10 @@ on_load:
     --tweet-text-font-size: 14px;
     --tweet-text-line-height: 16px;
     --tweet-color-light: #FCFCFC;
-    --tweet-color-dark: #515F65;
+    --tweet-color-dark: ##15202B;
     --tweet-color-white: #ffffff;
     --tweet-color-black: #000000;
-    --tweet-color-gray: #788D96;
+    --tweet-color-gray: #8899A6;
     --tweet-color-text-light: #EDEDED;
     --tweet-color-text-dark: #212529;
     --tweet-color-sky: #00BAF1;
