--- a/tweets/index.html
+++ b/tweets/index.html
@@ -146,7 +146,7 @@ on_load:
   {% for tweet in site.tweets %}
   <div class="tweet-card">
     <div class="tweet-left-panel">
-      <img class="user-avatar" src="{{ site.url }}/assets/images/avatar/avatar_color.png" />
+      <img class="tweet-user-avatar" src="{{ site.url }}/assets/images/avatar/avatar_color.png" />
     </div>
     <div class="tweet-right-panel">
       <div class="tweet-user-info">
