--- a/tweets/index.html
+++ b/tweets/index.html
@@ -69,7 +69,7 @@ on_load:
     border-radius: 50%;
   }
   .tweet-user-info {
-    height: var(--tweet-user-line-height);
+    min-height: var(--tweet-user-line-height);
   }
   .tweet-user-info .tweet-name {
     font-weight: bold;
@@ -134,6 +134,7 @@ on_load:
     -ms-flex-wrap: wrap;
     -webkit-flex-wrap: wrap;
     border-radius: 5px;
+    overflow: hidden;
   }
   .tweet-media .tweet-media-cell {
     /* flex: 0 0 50.00%;
@@ -177,7 +178,7 @@ on_load:
               {% assign tweet_media_cols = 3 %}
             {% endif %}
           {% endif %}
-          
+
           {% for tweet_img in tweet.media %}
           <div class="tweet-media-cell" style="{% include grid_cols_to_style.html cols=tweet_media_cols %}">
             {% assign tweet_media_type = tweet_img.type | default: 'image' %}
