--- a/tweets/index.html
+++ b/tweets/index.html
@@ -87,8 +87,8 @@ on_load:
   .tweet-user-info .tweet-date {
     color: var(--tweet-color-gray);
     font-weight: 400;
-    font-size: var(--tweet-user-font-size);
-    line-height: var(--tweet-user-line-height);
+    font-size: var(--tweet-text-font-size);
+    line-height: var(--tweet-text-line-height);
   }
   .tweet-user-info .tweet-name a {
     text-decoration: none;
