--- a/tweets/index.html
+++ b/tweets/index.html
@@ -55,6 +55,11 @@ on_load:
     border: 1px solid rgba(255, 255, 255, .125);
     background-color: var(--tweet-color-dark);
   }
+  .tweet-card a,
+  .tweet-card a:hover {
+    border: none;
+    background: none;
+  }
   .tweet-left-panel {
     width: var(--tweet-avatar-length);
   }
