--- a/tweets/index.html
+++ b/tweets/index.html
@@ -199,9 +199,21 @@ on_load:
           <div class="tweet-media-cell" style="{% include grid_cols_to_style.html cols=tweet_media_cols %}">
             {% assign tweet_media_type = tweet_img.type | default: 'image' %}
             {% assign tweet_media_format = tweet_img.format %}
-            {% assign tweet_media_folder = site.url | append: '/assets/tweets/' %}
-            {% assign tweet_media_original = tweet_media_folder | append: tweet_img.url %}
-            {% assign tweet_media_preview = tweet_media_folder | append: 'preview_' | append: tweet_img.url %}
+            {% if tweet_img.gallery %}
+              {% if tweet_media_type == 'image' %}
+                {% assign tweet_media_folder = site.url | append: '/assets/gallery/photography/' %}
+                {% assign tweet_media_original = tweet_media_folder | append: 'high/' | append: tweet_img.url %}
+                {% assign tweet_media_preview = tweet_media_folder | append: 'low/' | append: tweet_img.url %}
+              {% else %}
+                {% assign tweet_media_folder = site.url | append: '/assets/gallery/videos/' %}
+                {% assign tweet_media_original = tweet_media_folder | append: tweet_img.url %}
+                {% assign tweet_media_preview = tweet_media_folder | append: tweet_img.url | append: '.jpg' %}
+              {% endif %}
+            {% else %}
+              {% assign tweet_media_original = tweet_media_folder | append: tweet_img.url %}
+              {% assign tweet_media_preview = tweet_media_folder | append: 'preview_' | append: tweet_img.url %}
+              {% assign tweet_media_folder = site.url | append: '/assets/tweets/' %}
+            {% endif %}
             <a href="{{ tweet_media_original }}" type="{{ tweet_media_type }}/{{ tweet_media_format }}"{% if tweet_media_type == 'video' %} data-poster="{{ tweet_media_preview }}" data-sources='[{ "href": "{{ tweet_media_original }}", "type": "{{ tweet_media_type }}/{{ tweet_media_format }}"}]'{% endif %}>
               <img src="{{ tweet_media_preview }}" />
             </a>
