--- a/tweets/index.html
+++ b/tweets/index.html
@@ -23,7 +23,7 @@ on_load:
     --tweet-text-font-size: 14px;
     --tweet-text-line-height: 16px;
     --tweet-color-light: #FCFCFC;
-    --tweet-color-dark: ##15202B;
+    --tweet-color-dark: #15202B;
     --tweet-color-white: #ffffff;
     --tweet-color-black: #000000;
     --tweet-color-gray: #8899A6;
@@ -38,7 +38,7 @@ on_load:
     min-width: 320px;
     border-radius: var(--tweet-margin);
     text-align: left;
-    margin: var(--tweet-margin) auto;
+    margin: 0 auto var(--tweet-margin) auto;
     padding: var(--tweet-margin);
     display: -webkit-flexbox;
     display: -ms-flexbox;
