--- a/_creative/cssfilter.html
+++ b/_creative/cssfilter.html
@@ -5,6 +5,7 @@ desc: "Generator to convert color"
 cover:
   url: 'cssfilter.png'
   format: 'png'
+display: true
 ---
 {% capture js_link_source %}
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
