--- a/_creative/fashion.html
+++ b/_creative/fashion.html
@@ -6,6 +6,7 @@ desc: "Concept effect"
 cover:
   url: 'fashion.gif'
   format: 'gif'
+display: true
 sections:
   - backgroud: 'forest1.jpg'
     front: ['front0.jpg', 'front1.jpg']
