--- a/_creative/macos.html
+++ b/_creative/macos.html
@@ -5,6 +5,7 @@ desc: "Desktop replica page"
 cover:
   url: 'macOS.jpg'
   format: 'jpeg'
+display: true
 wallpaper: "/assets/images/creative/macos/wallpaper.jpg"
 window_title: "Safari"
 iframe: "https://codepen.io/carolineartz/embed/qBOEzQa?height=265&default-tab=result"
