--- a/_creative/searchcenter.html
+++ b/_creative/searchcenter.html
@@ -5,6 +5,7 @@ desc: "Search Engines Collection"
 cover:
   url: 'searchcenter.png'
   format: 'png'
+display: true
 engines:
   - title: "Google"
     url: "https://www.google.com/search?q="
