--- a/_creative/soultarot.html
+++ b/_creative/soultarot.html
@@ -7,6 +7,7 @@ cover:
   url: 'soultarot.png'
   format: 'png'
 excerpt: "Tarot Cards Set"
+display: true
 ---
 {% if page.style == 'grid' %}
   <details class="detailed-content">
