--- a/map/index.html
+++ b/map/index.html
@@ -23,8 +23,8 @@ map:
         url: "/archives"
   - title: "Creative"
     url: "/creative"
-  - title: "Utils"
-    url: "/utils"
+  - title: "Cheats"
+    url: "/cheats"
   - title: "Blogroll"
     url: "/blogroll"
   - title: "About"
