--- a/_creative/ef1error.html
+++ b/_creative/ef1error.html
@@ -3,6 +3,11 @@ layout: null
 title: "騎記歐版 EF1 故障碼解析"
 version: "0.0.4"
 date: 20200708T180000+08:00
+desc: "騎記歐版 EF1 故障碼解析"
+cover:
+  url: 'ef1error.png'
+  format: ''png'
+display: false
 ---
 <!DOCTYPE html>
 <html lang="en">
