--- a/_creative/fJSFiddle.html
+++ b/_creative/fJSFiddle.html
@@ -5,6 +5,7 @@ desc: "Fake JSFiddle web app"
 cover:
   url: 'fJSFiddle.png'
   format: 'png'
+display: true
 ---
 <!DOCTYPE html>
 <html lang="en">
